src/includes/styles/index.css
@font-face {
  font-family: "Neue Montreal";
  src: url("/assets/fonts/PPNeueMontreal-Regular.woff") format("woff"),
    url("/assets/fonts/PPNeueMontreal-Regular.woff2") format("woff2");
  font-weight: 400;
}

@font-face {
  font-family: "Neue Montreal";
  src: url("/assets/fonts/PPNeueMontreal-Bold.woff") format("woff"),
    url("/assets/fonts/PPNeueMontreal-Bold.woff2") format("woff2");
  font-weight: 700;
}

:root {
  --font-family-body: "Neue Montreal", "Arial", "Helvetica", sans-serif;
  --font-family-display: "Neue Montreal", "Arial", "Helvetica", sans-serif;
  --dark: #1c1c1c;
  --light: #f7f7f7;
  --grey: #767676;
  --type-ratio: 1.375;
  --left-offset: clamp(0rem, 2rem + 4vw, 8rem);
  --border-color: #fff6;
  --fs-2x: calc(1rem * var(--type-ratio));
  --fs-3x: calc(1rem * var(--type-ratio) * 2);
}

body {
  font-family: var(--font-family-body);
  display: flex;
  flex-direction: column;
}

hr {
  border: 0;
  height: 1px;
  background-color: var(--border-color);
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
  line-height: 1.125;
}

.dark {
  background-color: var(--dark);
  color: var(--light);
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

a {
  text-underline-offset: 5px;
  text-decoration-thickness: 1px;
}

a:hover {
  text-decoration-thickness: 2px;
}

.dark a {
  color: var(--light);
}

.container {
  width: min(100% - 2rem, 2560px);
  margin-inline: auto;
}

.auto-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-grid-min-size, 300px), 100%), 1fr));
  gap: var(--auto-grid-gap, 1em);
}

.container--narrow {
  width: min(100% - 2rem, 80ch);
}

.flow > * + * {
  margin-top: var(--flow-space, 1em);
}

.header {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 1rem;
  margin-bottom: clamp(2.67rem, 2rem + 7vw, 16rem);
  border-bottom: 1px solid var(--border-color);
}

.header__title {
  display: flex;
  font-size: calc(1rem * var(--type-ratio));
  font-family: var(--font-family-display);
  line-height: 1.125;
  width: fit-content;
  column-gap: 1ex;
}

.header__link {
  text-decoration: none;
}

.footer {
  padding-top: 2em;
  padding-bottom: 2em;
  margin-top: auto;
}

.footer__contact-links {
  display: flex;
  flex-wrap: wrap;
  column-gap: 2ch;
  padding-bottom: 1em;
}

.footer__contact-link {
  font-size: clamp(
    1rem * var(--type-ratio),
    1rem + 1vw,
    calc(1rem * var(--type-ratio) * 2)
  );
}

.footer__meta {
  margin-top: 2em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.footer__meta-links {
  display: flex;
  width: max-content;
  gap: 2ch;
}

.dark .footer__contact-links {
  border-bottom: 1px solid var(--grey);
}

.dark .footer {
  background-color: var(--light);
  color: var(--dark);
}

.dark .footer__link {
  color: var(--dark);
  text-decoration: none;
}

.dark .header__link {
  color: var(--light);
}

.dark .header__link:hover {
  opacity: 80%;
}

.header__menu {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  column-gap: 1rem;
}

.hero {
  --flow-space: 2.5em;
  margin-bottom: clamp(2.67rem, 2rem + 9vw, 16rem);
}

.hero__text {
  font-family: var(--font-family-display);
  font-size: clamp(
    1rem * var(--type-ratio) * 2,
    1rem + 3vw,
    calc(1rem * var(--type-ratio) * 4)
  );
  line-height: 1;
  width: min(100%, 800px);
}

.hero__blurb {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
  gap: 1em;
  width: min(100%, 700px);
}

@media screen and (min-width: 40em) {
  .hero__blurb {
    padding-left: var(--left-offset);
  }
}

.hero__contact-links {
  list-style: none;
  margin-top: 4em;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0;
  display: flex;
  column-gap: 1rem;
}

.latest-posts {
  margin-bottom: clamp(2.67rem, 2rem + 7vw, 16rem);
}

.latest-posts__header {
  --flow-space: 0.5em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border-bottom: 1px solid var(--border-color);
  padding-bottom: 1rem;
}

.latest-posts__title {
  font-size: calc(1rem * var(--type-ratio));
}

.latest-posts__articles {
  --auto-grid-min-size: 30rem;

  margin-left: 0;
  margin-bottom: 0;
  list-style: none;
  padding: 0;
}

.latest-posts__article {
  border-radius: 10px;
  padding: 1em;
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  position: relative;
}

.latest-posts__article:hover {
  background-color: var(--light);
}

.latest-posts__article:hover .latest-posts__article-link,
.latest-posts__article:hover .latest-posts__footer {
  color: var(--dark);
}

.latest-posts__article-link {
  text-decoration: none;
}

.latest-posts__article-link:before {
  position: absolute;
  content: "";
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

.latest-posts__article-title {
  font-size: clamp(
    1rem * var(--type-ratio),
    1rem + 1vw,
    calc(1rem * var(--type-ratio) * 2)
  );
}

.tags {
  margin-bottom: 1em;
  display: flex;
  flex-wrap: wrap;
  column-gap: 1ex;
}

.tag {
  text-decoration: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
  border-radius: 5px;
  font-weight: 700;
  z-index: 2;
}

.latest-posts__article-date {
  margin-top: 3em;
}

.dark .tag {
  background-color: var(--light);
  color: var(--dark);
}

.latest-posts__footer {
  margin-top: auto;
}

.latest-posts__see-all-large {
  margin-top: 2em;
  font-size: calc(1rem * var(--type-ratio) * 2);
}

.rss {
  margin-bottom: clamp(2.67rem, 2rem + 7vw, 16rem);
}

.rss__title {
  font-size: clamp(
    1rem * var(--type-ratio),
    1rem + 2vw,
    calc(1rem * var(--type-ratio) * 3)
  );
}

.rss__content {
  --flow-space: 2em;
}

@media screen and (min-width: 40em) {
  .rss__content {
    padding-left: var(--left-offset);
    width: min(100%, 800px);
  }
}

.page-title {
  font-size: clamp(
    1rem * var(--type-ratio) * 2,
    1rem + 5vw,
    calc(1rem * var(--type-ratio) * 6)
  );
}

.blog {
  margin-bottom: clamp(2.67rem, 2rem + 9vw, 16rem);
}

.blog__blurb {
  display: grid;
  grid-template-columns: 3fr 1fr 1fr;
  gap: 1em;
}

.blog__blurb-title {
  font-size: clamp(1rem, 1rem + 1vw, 1rem * var(--type-ratio));
}

.blog-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.blog-list__item {
  border-top: 1px solid var(--border-color);
  padding-top: 2em;
  padding-bottom: 2em;
  position: relative;
}

.blog-list__item:last-child {
  border-bottom: 1px solid var(--border-color);
}

.blog-list__item-link {
  text-decoration: none;
  display: inline-block;
  margin-top: 4rem;
}

.blog-list__item-link:before {
  position: absolute;
  content: "";
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

.blog-list__item-date {
  margin-bottom: 1em;
}

.blog-list__item-title {
  font-size: clamp(
    1rem * var(--type-ratio),
    1rem + 2vw,
    calc(1rem * var(--type-ratio) * 2)
  );
}

.dark .blog-list__item:hover {
  background-color: var(--light);
  color: var(--dark);
}

.dark .blog-list__item:hover .blog-list__item-link {
  color: var(--dark);
}

.blog-title {
  font-size: clamp(
    1rem * var(--type-ratio) * 2,
    1rem + 3vw,
    calc(1rem * var(--type-ratio) * 3)
  );
}

.blog-date {
  margin-top: 2em;
  font-size: clamp(1rem, 1rem + 2vw, calc(1rem * var(--type-ratio)));
}

.blog-header {
  margin-bottom: 4em;
}

.blog-content {
  padding-top: 4em;
  padding-bottom: 8em;
}

.blog-content h2 {
  font-size: var(--fs-3x);
  margin-bottom: 0.5em;
}

.blog-content h3 {
  font-size: var(--fs-2x);
  margin-bottom: 0.5em;
}

.blog-content * + h2,
.blog-content * + h3 {
  margin-top: 1em;
}

.blog-content p + pre {
  margin-top: 2em;
}

.blog-content pre + p {
  margin-top: 2em;
}

.blog-content p + p {
  margin-top: 1em;
}

.blog-content pre {
  padding-top: 2em;
  padding-bottom: 2em;
  padding-left: 2em;
  padding-right: 2em;
  border-radius: 5px;
}

.blog-content p > code {
  background-color: #2b2b2b;
}

.about-hero {
  margin-bottom: 16rem;
}

.about-hero__lead {
  line-height: 1.125;
  font-size: clamp(
    1rem * var(--type-ratio) * 2,
    1rem + 2.5vw,
    calc(1rem * var(--type-ratio) * 3)
  );
  width: min(100%, 1200px);
  margin-bottom: 2em;
}

.about-hero__content {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
  gap: 2em;
  width: min(100%, 1200px);
}

.competencies-title {
  font-size: var(--fs-3x);
  margin-bottom: 1em;
}

.competencies-list {
  font-size: var(--fs-2x);
  display: grid;
  list-style: none;
  margin: 0;
  padding: 0;
}

